--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
         "db:studio": "drizzle-kit studio",
         "db:seed": "tsx scripts/seed-data.ts",
         "test:api": "node scripts/test-api.js",
+        "auth:generate": "cd services/auth-service && npm run generate",
         "dev:gateway": "cd services/api-gateway && npm run dev",
         "dev:routes": "cd services/route-service && npm run dev",
         "dev:realtime": "cd services/realtime-service && npm run dev",
         "dev:chat": "cd services/chat-service && npm run dev",
         "dev:notifications": "cd services/notification-service && npm run dev",
+        "start:gateway": "cd services/api-gateway && npm run dev",
+        "start:routes": "cd services/route-service && npm run dev",
+        "start:realtime": "cd services/realtime-service && npm run dev",
+        "start:chat": "cd services/chat-service && npm run dev",
+        "start:notifications": "cd services/notification-service && npm run dev",
+        "start:auth": "cd services/auth-service && go run main.go",
+        "start:payment": "cd services/payment-service && go run main.go",
+        "start:analytics": "cd services/analytics-service && go run main.go",
         "build:all": "npm run build --workspaces",
         "test": "npm test --workspaces",
         "docker:up": "docker-compose up -d",
