added place services

--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,8 @@ PLATFORM_COMMISSION_PERCENTAGE=15
 # WebSocket
 WS_HEARTBEAT_INTERVAL=30000
 WS_MAX_CONNECTIONS=10000
+
+# Google Places API
+GOOGLE_PLACES_API_KEY=your_google_places_api_key_here
+PLACES_SERVICE_PORT=3009
+PLACES_SERVICE_URL=http://localhost:3009
